--- a/kmc/app/src/main/AndroidManifest.xml
+++ b/kmc/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kmc">
         <activity
+            android:name=".CLogin.CollectorDistrictMasterReport"
+            android:exported="false" />
+        <activity
             android:name=".CLogin.CollectorMasterReport"
             android:exported="false" />
         <activity
