--- a/kmc/app/src/main/AndroidManifest.xml
+++ b/kmc/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
             android:name=".CLogin.CollectorMenu"
             android:exported="false" />
         <activity
+            android:name=".SOLogin.addVendor"
+            android:exported="false" />
+        <activity
+            android:name=".SOLogin.SOAddEdit"
+            android:exported="false" />
+        <activity
             android:name=".CLogin.change_password_ctr"
             android:exported="false" />
         <activity
