--- a/kmc/app/src/main/AndroidManifest.xml
+++ b/kmc/app/src/main/AndroidManifest.xml
@@ -86,6 +86,18 @@
             android:name=".CLogin.CollectorSearchAmountToDB"
             android:exported="false" />
         <activity
+            android:name=".CLogin.CollectorUnitSearch2"
+            android:exported="false" />
+        <activity
+            android:name=".CLogin.CollectorUnitSearch3"
+            android:exported="false" />
+        <activity
+            android:name=".CLogin.CollectorUnitSearch4"
+            android:exported="false" />
+        <activity
+            android:name=".CLogin.CollectorUnitSearch5"
+            android:exported="false" />
+        <activity
             android:name=".PSLogin.PSSearchAmountDBToBen"
             android:exported="false" />
         <activity
